--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,6 +1,6 @@
 on:
-  schedule:
-    - cron:  '*/5 * * * *'
+ # schedule:
+   # - cron:  '*/5 * * * *'
     # scheduled at 07:00 every Monday and Thursday
 
   workflow_dispatch:  # click the button on Github repo!
